--- a/index.Rmd
+++ b/index.Rmd
@@ -1,36 +1,38 @@
---- 
-title: "A Minimal Book Example"
-author: "Yihui Xie"
+---
+title: "Teoria de Galois"
+author: "Marc Masdeu"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
-output: bookdown::gitbook
 documentclass: book
-bibliography: [book.bib, packages.bib]
+bibliography: [bibliografia.bib]
 biblio-style: apalike
 link-citations: yes
-github-repo: rstudio/bookdown-demo
-description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
+github-repo: mmasdeu/mybook
+description: "Apunts d'un curs de Teoria de Galois a la UAB"
+output:
+  bookdown::pdf_book:
+    includes:
+      in_header: preamble.tex
+    toc: no
+  bookdown::gitbook:
+    split_by: chapter
+    config:
+        toolbar:
+           position: static
+    includes:
+      in_header: mathjaxheader.html
+  bookdown::html_book:
+    split_by: chapter
+    theme: spacelab
+    config:
+        toolbar:
+           position: static
+    includes:
+      in_header: mathjaxheader.html
+
 ---
 
-# Prerequisites
 
-This is a _sample_ book written in **Markdown**. You can use anything that Pandoc's Markdown supports, e.g., a math equation $a^2 + b^2 = c^2$.
+# Introducció {-}
 
-The **bookdown** package can be installed from CRAN or Github:
-
-```{r eval=FALSE}
-install.packages("bookdown")
-# or the development version
-# devtools::install_github("rstudio/bookdown")
-```
-
-Remember each Rmd file contains one and only one chapter, and a chapter is defined by the first-level heading `#`.
-
-To compile this example to PDF, you need XeLaTeX. You are recommended to install TinyTeX (which includes XeLaTeX): <https://yihui.name/tinytex/>.
-
-```{r include=FALSE}
-# automatically create a bib database for R packages
-knitr::write_bib(c(
-  .packages(), 'bookdown', 'knitr', 'rmarkdown'
-), 'packages.bib')
-```
+Aquests són uns apunts de Teoria de Galois, pensats pel curs de 3r del Grau de Matemàtiques de la UAB.
