--- a/mathsymbols.sty
+++ b/mathsymbols.sty
@@ -33,5 +33,8 @@
 \providecommand{\abs}[1]{|#1|}
 \providecommand{\slsh}[1]{|_{#1}}
 \providecommand{\qed}{\blacksquare}
-
+\providecommand{\Irr}{\operatorname{Irr}}
+\providecommand{\Aut}{\operatorname{Aut}}
+\providecommand{\Gal}{\operatorname{Gal}}
+\providecommand{\Mor}{\operatorname{Mor}}
 % \providecommand{\implies}{\Longrightarrow}
