Fixed bibliography, added one more file

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1,1 +1,21 @@
-@book{DummitFoote, address={New York}, edition={3rd ed}, title={Abstract algebra}, publisher={Wiley}, author={Dummit, David S. and Foote, Richard M.}, year={2004} }
+@book{dummit-foote,
+address={New York},
+edition={3rd ed},
+title={Abstract algebra},
+publisher={Wiley},
+author={Dummit, David S. and Foote, Richard M.},
+year={2004} }
+
+@book{artin-algebra,
+edition = {2nd ed., new international ed.},
+isbn = {978-1-292-02766-1},
+keywords = {Álgebra},
+language = {eng},
+author = {Artin, Michael.},
+address = {Edinbourgh Gate, Harlow, Essex},
+booktitle = {Algebra},
+publisher = {Pearson},
+title = {Algebra / Michael Artin.},
+year = {2014},
+}
+
