--- a/99-references.Rmd
+++ b/99-references.Rmd
@@ -1,3 +1,10 @@
-`r if (knitr:::is_html_output()) '
+---
+nocite: |
+  @dummit-foote, @artin-algebra
+---
+
+\nocite{*}
+
+`r if (knitr:::is_html_output())'
 # Bibliografia {-}
 '`
