--- a/index.Rmd
+++ b/index.Rmd
@@ -14,22 +14,25 @@ output:
     includes:
       in_header: preamble.tex
     toc: yes
-    microtypeoptions: verbose=silent
+    microtypeoptions:
+      - verbose=silent
   bookdown::gitbook:
     split_by: chapter
     config:
         toolbar:
-           position: static
+          position: static
     includes:
       in_header: mathjaxheader.html
+
   bookdown::html_book:
     split_by: chapter
     theme: spacelab
     config:
         toolbar:
-           position: static
+          position: static
     includes:
       in_header: mathjaxheader.html
+      
 
 ---
 
@@ -44,7 +47,7 @@ L'assignatura de Teoria de Galois es cursa al primer semestre del tercer curs de
 - Una hora setmanal de problemes (15 setmanes).
 - Tres seminaris pràctics, de 2h cadascun.
 
-El curs es pot dividir de manera natural en 15 sessions de dues hores. El temps efectiu de cadascuna d'aquestes sessions és de 100 minuts, i hem pensat que us pot pensar com una sèrie de 15 capítols. Seguidament detallem cadascun d'aquests capítols i la seva sinopsi.
+El curs es pot dividir de manera natural en 15 sessions de dues hores. El temps efectiu de cadascuna d'aquestes sessions és de 100 minuts, i es pot pensar com una sèrie de 15 capítols. Seguidament detallem cadascun d'aquests capítols i la seva sinopsi.
 
 Pensem que en un curs com aquest hi ha idees molt importants que cal transmetre el més efectivament possible. També hi ha idees menys importants que poden obfuscar aquestes idees fonamentals, de manera que optaré per fer la teoria amb algunes hipòtesis simplificadores. Les classes de problemes introduiran exercicis amb més generalitat.
 
