--- a/src/bibliografia.bib
+++ b/src/bibliografia.bib
@@ -1,4 +1,4 @@
-@book{dummit-foote,
+@book{dummitfoote,
 address={New York},
 edition={3rd ed},
 title={Abstract algebra},
@@ -6,7 +6,7 @@ publisher={Wiley},
 author={Dummit, David S. and Foote, Richard M.},
 year={2004} }
 
-@book{artin-algebra,
+@book{artinalgebra,
 edition = {2nd ed., new international ed.},
 isbn = {978-1-292-02766-1},
 keywords = {Álgebra},
