--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -1,6 +1,8 @@
-\usepackage{microtype}
+\usepackage{textcomp}
+\usepackage{tgbonum}
 \usepackage{booktabs}
 \usepackage{unixode}
+\usepackage{mathsymbols}
 \usepackage[catalan]{babel}
 \usepackage{amsmath,amsthm,amssymb,amsfonts}
 \definecolor{VerbatimBorderColor}{rgb}{0.7,0.7,0.7}
@@ -8,7 +10,8 @@
 \DeclareRobustCommand{\and}{%
    \end{tabular}\kern-\tabcolsep\\\begin{tabular}[t]{c}%
 }
-\input{mathsymbols.sty}
+
+
 \setlength{\headheight}{15pt}
 
 \makeatletter
