Reordered course to make it similar to D-F.

--- a/src/04-Descomposicio.Rmd
+++ b/src/04-Descomposicio.Rmd
@@ -1,4 +1,4 @@
-# Cossos de descomposició
+# Descomposició
 
 El cos de descomposició d'un polinomi juga un paper destacat al llarg del curs.
 Aquí els definirem, i en demostrarem l'existència i unicitat (llevat d'isomorfisme). També
