--- a/src/07-Automorfismes.Rmd
+++ b/src/07-Automorfismes.Rmd
@@ -1,4 +1,8 @@
-# Simetries
+# Automorfismes
+
+Aquesta sessió no parla de teoria de cossos, sinó de grups. Això ens cal ja que el teorema fonamental ens relaciona les dues teories. Introduïrem
+la noció de resolubilitat d'un grup, parlarem dels grups simples i veurem que el grup alternat $A_n$ no és simple per a tot $n \geq 5$. Això
+implica que $S_n$ no és resoluble per $n\geq 5$.
 
 Començarem definint els automorfismes d'una extensió. Veurem que formen
 un grup, i que cada subgrup té associat el cos dels elements fixos per aquest. Veurem també
