--- a/src/08-TeoremaFonamental.Rmd
+++ b/src/08-TeoremaFonamental.Rmd
@@ -1,4 +1,15 @@
-# La independència (dels caràcters)
+# El Teorema Fonamental
+
+Enunciem i demostrem el teorema fonamental de la teoria de Galois. Farem
+servir la independència lineal dels caràcters (que tmabé demostrarem). Després veurem
+que si $L / F$ és una extensió finita i $H$ un subgrup de $\Aut(L/F)$, aleshores
+$[L \colon FH] = |H|$. Aquest fet, fonamental, ens permet també caracteritzar
+les extensions de Galois com aquelles que són normals i separables.
+
+Aleshores ja estarem en posició d'enunciar i demostrar el teorema fonamental. Acabarem
+amb diversos exemples concrets d'extensions, il·lustrant la correspondència de Galois.
+
+## La independència (dels caràcters)
 
 En aquesta secció demostrarem un resultat d'àlgebra lineal necessari per la demostració del teorema fonamental de la TG.
 
