--- a/mathsymbols.sty
+++ b/mathsymbols.sty
@@ -38,3 +38,6 @@
 \providecommand{\Gal}{\operatorname{Gal}}
 \providecommand{\Mor}{\operatorname{Mor}}
 % \providecommand{\implies}{\Longrightarrow}
+
+\providecommand{\char}{\operatorname{char}}
+\providecommand{\car}{\operatorname{char}}
