--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -1,17 +1,19 @@
 \usepackage{textcomp}
 \usepackage{tgbonum}
 \usepackage{booktabs}
+
 \usepackage{unixode}
-\usepackage{mathsymbols}
+
 \usepackage[catalan]{babel}
 \usepackage{amsmath,amsthm,amssymb,amsfonts}
+\usepackage[all]{xy}
 \definecolor{VerbatimBorderColor}{rgb}{0.7,0.7,0.7}
 % from sphinxmanual.cls: put authors on separate lines
 \DeclareRobustCommand{\and}{%
-   \end{tabular}\kern-\tabcolsep\\\begin{tabular}[t]{c}%
+\end{tabular}\kern-\tabcolsep\\\begin{tabular}[t]{c}%
 }
 
-
+\usepackage{mathsymbols}
 \setlength{\headheight}{15pt}
 
 \makeatletter
@@ -20,4 +22,3 @@
   \thm@postskip=\thm@preskip
 }
 \makeatother
-
