--- a/src/02-Torres.Rmd
+++ b/src/02-Torres.Rmd
@@ -1,3 +1,5 @@
 # Les Torres
 
-L'objectiu és estudiar torres d'extensions, i com es comporta el grau en torres finits. Veurem aplicacions que té aquesta fórmula, com ara el càlcul del grau de la composició d'extensions.
+Parlarem d'extensions simples, i del teorema d'aixecament a anells de polinomis i el teorema de l'extensió.
+També definirem elements algebraics i transcendents i el polinomi mínim d'un element algebraic, amb exemples.
+Enunciarem i demostrarem la fórmula de les torres, i com es comporta el grau en composicions de cossos.
