--- a/src/04-Descomposicio.Rmd
+++ b/src/04-Descomposicio.Rmd
@@ -1,10 +1,12 @@
 # Descomposició
 
 El cos de descomposició d'un polinomi juga un paper destacat al llarg del curs.
-Aquí els definirem, i en demostrarem l'existència i unicitat (llevat d'isomorfisme). També
-enunciarem i demostrarem el teorema de l'extensió, que ens permet estendre isomorfismes de cossos
-a extensions que siguin clausura de Galois d'un polinomi. Aprofitarem per definir
-extensions normals (aquelles que són cos de descomposició d'un conjunt de polinomis).
+Aquí el definirem, i en demostrarem l'existència i unicitat (llevat d'isomorfisme).
+Aprofitarem per definir extensions normals (aquelles que són cos de descomposició d'un conjunt de polinomis).
 
 Com a aplicació, s'introduiran els polinomis i cossos ciclotòmics, i ho lligarem amb la
 demostració de l'existència i unicitat de cossos finits de cardinal potència d'un primer.
+
+També veurem les clausures algebraiques, i una construcció (seguint Artin). Això ens permetrà (assumint el teorema fonamental
+de l'àlgebra, que demostrarem més endavant) pensar els elements algebraics sobre $\QQ$ dins dels complexos.
+
