--- a/src/01-Cossos.Rmd
+++ b/src/01-Cossos.Rmd
@@ -63,7 +63,11 @@ $$
 \end{xy}
 $$
 
-L'observació clau és que quan tenim una extensió $K/F$ aleshores $K$ esdevé automàticament un $F$-espai vectorial. Això
+Com que un cos no té ideals propis, un morfisme de cossos $\iota\colon F\to K$ és sempre injectiu i, per tant, la
+imatge de $\iota$ és un subcos de $K$ isomorf a $F$. A partir d'ara, a vegades identificarem $F$ amb $\iota(F)$, i direm
+que $K$ és una extensió de $F$.
+
+Seguidament fem la següent observació clau: quan tenim una extensió $K/F$ aleshores $K$ esdevé automàticament un $F$-espai vectorial. Això
 ens permet definir:
 
 ::: {.definition #grau-ext name="grau d'una extensió"}
@@ -73,4 +77,7 @@ i infinita si no.
 
 ::: {.theorem #ext-arrel name="adjunció d'arrels"}
 Sigui $p(x)\in F[x]$ un polinomi irreductible. Aleshores existeix una extensió $K/F$ tal que $K$ té una arrel de $p(x)$.
+:::
+::: {.proof}
+TODO
 :::
