Updadated to more modern mathjax xy

--- a/src/01-Cossos.Rmd
+++ b/src/01-Cossos.Rmd
@@ -127,8 +127,14 @@ un *element primitiu* de l'extensió (que no és únic, en general!).
 
 ::: {.theorem #ext-simple name="extensió simple"}
 Sigui $p(x)\in F[x]$ un polinomi irreductible, i suposem que $K/F$ és una extensió que conté una arrel $\alpha$ de $p(x)$.
-Aleshores hi ha un isomorfisme $$F(\alpha) \cong F[x]/(p(x)).$$
+Aleshores hi ha un isomorfisme $$F[x]/(p(x))\cong F(\alpha).$$
+Aquest isomorfisme és únic si demanem que $[x]\mapsto \alpha$.
 :::
 ::: {.proof}
 TODO
+:::
+
+::: {.example}
+Expliquem l'exemple de $\QQ(\sqrt{2})$ i la diferència amb $\QQ(\sqrt[3]{2})$. Aquest darrer cos és un subcòs de $\RR$, però hi ha
+un altre subcòs de $\CC$ que és isomorf a aquest.
 :::
