--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -2,7 +2,7 @@
 \usepackage{tgbonum}
 \usepackage{booktabs}
 \usepackage{unixode}
-
+\usepackage{tikz-cd}
 \usepackage[catalan]{babel}
 \usepackage{amsmath,amsthm,amssymb,amsfonts}
 \usepackage[all]{xy}
