--- a/index.Rmd
+++ b/index.Rmd
@@ -39,6 +39,39 @@ output:
 ---
 # Introducció {-}
 
+
+```{r, echo=FALSE, engine='tikz', out.width='70%', fig.ext='png'}
+\begin{tikzpicture}[node distance=1.5cm]
+\title{Untergruppenverband der $A_4$}
+\node(A4)                           {$A_4$};
+\node(V4)       [below right of=A4] {$V_4$};
+\node(C31)      [below left of=A4]  {$C_3$};
+\node(C32)      [left of=C31]       {$C_3$};
+\node(C33)      [left of=C32]       {$C_3$};
+\node(C34)      [left of=C33]       {$C_3$};
+\node(C22)      [below of=V4]       {$C_2$};
+\node(C21)      [left of=C22]       {$C_2$};
+\node(C23)      [right of=C22]      {$C_2$};
+
+\node(1)            [below left of=C21]     {$\left\{1\right\}$};
+\draw(A4)       -- (V4);
+\draw(A4)       -- (C31);
+\draw(A4)       -- (C32);
+\draw(A4)       -- (C33);
+\draw(A4)       -- (C34);
+\draw(C31)      --  (1);
+\draw(C32)      --  (1);
+\draw(C33)      --  (1);
+\draw(C34)      --  (1);
+\draw(V4)       -- (C21);
+\draw(V4)       -- (C22);
+\draw(V4)       -- (C23);
+\draw(C21)      --  (1);
+\draw(C22)      --  (1);
+\draw(C23)      --  (1);
+\end{tikzpicture}
+```
+
 Aquests són uns apunts de *Teoria de Galois*, pensats pel curs de 3r del Grau de Matemàtiques de la UAB.
 
 L'assignatura de *Teoria de Galois* es cursa al primer semestre del tercer curs del Grau de Matemàtiques de la UAB. Consta de 6 crèdits, repartits en:
@@ -48,3 +81,13 @@ L'assignatura de *Teoria de Galois* es cursa al primer semestre del tercer curs 
 - Tres seminaris pràctics, de 2h cadascun.
 
 El curs es pot dividir de manera natural en 15 sessions de dues hores. El temps efectiu de cadascuna d'aquestes sessions és de 100 minuts, i es pot pensar com una sèrie de 15 capítols. Seguidament detallem cadascun d'aquests capítols i la seva sinopsi.
+
+
+`r if (knitr:::is_html_output())"
+**Important:** Si aquí sota no hi veieu un $OK$, heu d'activar l'opció HTML-CSS de *MathJax* al vostre navegador:
+$$
+\\begin{xy}
+\\xymatrix{OK}
+\\end{xy}
+$$
+"`
