--- a/mathsymbols.sty
+++ b/mathsymbols.sty
@@ -5,6 +5,8 @@
 \providecommand{\CC}{\mathbb{C}}
 \providecommand{\HH}{\mathbb{H}}
 
+\providecommand{\cC}{\mathcal{C}}
+
 \providecommand{\fX}{\mathfrak{X}}
 
 \providecommand{\SL}{\operatorname{SL}}
